<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context="csci490.cofc.edu.stockquote_mainar.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_sym"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:layout_marginLeft="@dimen/input_align"/>
        <EditText
            android:layout_width="@dimen/input_field"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:id="@+id/edit_text"
            android:hint="@string/hint"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sym_text"
            android:layout_marginLeft="@dimen/text_align"
            android:layout_marginVertical="@dimen/ver_dimen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/symbol"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginVertical="@dimen/ver_dimen"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:layout_marginLeft="@dimen/text_align"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:id="@+id/name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastPr_text"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:layout_marginLeft="@dimen/text_align"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:id="@+id/lastPrice"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastTi_text"
            android:layout_marginLeft="@dimen/text_align"
            android:layout_marginVertical="@dimen/ver_dimen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginVertical="@dimen/ver_dimen"
            android:id="@+id/lastTime"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_text"
            android:layout_marginLeft="@dimen/text_align"
            android:layout_marginVertical="@dimen/ver_dimen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/change"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginVertical="@dimen/ver_dimen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range_text"
            android:layout_marginLeft="@dimen/text_align"
            android:layout_marginVertical="@dimen/ver_dimen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/range"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginVertical="@dimen/ver_dimen"/>
    </LinearLayout>



</LinearLayout>
